--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="style.css" />
+		<link rel="manifest" href="/manifest.webmanifest" />
 	</head>
 	<body>
 		<div class="container my-5">
